--- a/style.css
+++ b/style.css
@@ -1,4 +1,9 @@
+:root {
+    --color-beige: #f8e7d3;
+    --color-khaki-light: #DEC4A6;
+    --color-brown-light: #CC9A7E;
 
+}
 
 * {
     border: solid 1px black;
@@ -25,8 +30,8 @@ h1, h2, h3, h4 {
 nav {
     width: 100%;
     height: 50px;
-    border-bottom: solid 1px #CC9A7E;
-    background-color: #f8e7d3;
+    border-bottom: solid 1px var(--color-brown-light);
+    background-color: var(--color-beige);
     position: sticky;
     top: 0px;
     z-index: 2; /* 將z-index設為2 */
@@ -50,7 +55,7 @@ nav li {
     color: rgb(0,0,0,.8);
     font-weight: bold;
     &:hover {
-        background-color: #CC9A7E;
+        background-color: var(--color-brown-light);
         color: white;
     }
 }
@@ -66,28 +71,51 @@ h4 {font-size: 16px;} /* header hashtags */
     width: 48%;
 }
 #header_pre {
-    background-color: #f8e7d3;
+    background-color: var(--color-beige);
     text-align: center;    
 }
 /*  */
 #header_all {
     position: relative;
 }
+#PIC1, #PIC2 {
+    display: inline-block;
+    width: 49%;
+    text-align: center;
+    /* display: flex; */
+    /* justify-content: space-between; */
+    border:#000 solid 1px;
+}
+#PIC1 {
+    position: sticky;
+    top: 25%;
+    margin-bottom: 170px;
+}
+#PIC2 {    
+    position: sticky;
+    top: 16%;
+    margin-bottom: 170px;    
+} 
 #LOGO {
-    width: 35%;
-    padding: 2%;
+    width: 500px;
+    padding: 20% 2% 2% 25%;
+    margin-left: 60px;
     /* position: sticky; */
-    top: 33%;
-    left: 13%;
+    /* top: 33%; */
+    /* left: 13%; */
 }
 #PHOTO {
-    padding: 1%;
-    width: 40%;
-    /* margin-left: 50%; */
+    width: 550px;
+    margin-right: 80px;
+    /* margin-top: 10%; */
+    /* margin-right: 10%; */
     /* position: sticky; */
-    top: 12%;
-    border-radius: 0%;
+    /* top: 12%; */
+    /* border-radius: 0%; */
     /* margin-bottom: 500px; */
+}
+#header_pre .container {
+    padding-top: 0;
 }
 /*  */
 #header_pre .arrow {
@@ -113,20 +141,21 @@ h4 {font-size: 16px;} /* header hashtags */
     z-index: 1; /* 將z-index設為1 */
 }
 /* #header_index -> #header_intro */
-#header_intro .text {
+#header_index .text {
     text-align: right;
     margin-top: 10%;
     margin-right: 2%;    
 }
-#header_intro .intro {
+#header_index .intro {
     margin-bottom: 0;
 }
-#header_intro .hashtags {
+#header_index .hashtags {
     margin-top: 0;
     display: inline-block;
     padding: 0px 0px 0px 8px;
     text-decoration: underline;
 }
+
 
 /*---- #section ----*/
 h1 { /* section title */
