--- a/style.css
+++ b/style.css
@@ -20,7 +20,7 @@
 }
 
 * {
-    border: solid 1px black;
+    /* border: solid 1px black; */
     font-family: 微軟正黑體;
 }
 html, body {
@@ -49,7 +49,7 @@ nav {
     background-color: var(--color-khaki-lightest);
     position: sticky;
     top: 0px;
-    z-index: 2; /* 將z-index設為2 */
+    z-index: 5; /* 將z-index設為5 */
 }
 nav .container {
     padding: 0px 3%;
@@ -98,9 +98,6 @@ h4 {font-size: 16px;} /* header hashtags */
     display: inline-block;
     width: 49%;
     text-align: center;
-    /* display: flex; */
-    /* justify-content: space-between; */
-    /* border:#000 solid 1px; */
 }
 #PIC1 {
     position: sticky;
@@ -154,7 +151,6 @@ h4 {font-size: 16px;} /* header hashtags */
     position: absolute;    
     right: 13%;
     top: 16%;
-    z-index: 1; /* 將z-index設為1 */
 }
 
 #header_index .text {
@@ -181,25 +177,24 @@ h4 {font-size: 16px;} /* header hashtags */
 .margintop {
     position: absolute;
     top: -80px;
-    right: 310px;    
+    right: 320px;    
 }
 .heart {
     display: inline-block;
-    width: 70px;
+    width: 50px;
     height: 150px;
     transition-duration: .2s;
     &:hover {
-        transform: translateY(-20px);
-        
+        transform: translateY(-20px);        
     }
 }
 #section_book .marginbottom {
     position: absolute;
-    bottom: 50px;
-    left: 250px;    
+    bottom: 60px;
+    left: 270px;    
 }
 .rectangle {
-    width: 450px;
+    width: 400px;
     padding: 20px;
     transform: rotate(15deg);
     transition-duration: .2s;
@@ -213,39 +208,17 @@ h4 {font-size: 16px;} /* header hashtags */
     right: 350px;    
 }
 .circle {
+    position: relative;
     width: 150px; 
     margin-left: -50px;
     transition-duration: .2s;
     &:hover {
-        transform: translateY(30px);
-        
+        transform: translateY(30px);        
     }   
 }
-.circle1 {
-    z-index: 1;
-    /* &:hover {
-        z-index: 1;
-        transform: translateY(30px);        
-    }     */
-}
-.circle2 {
-    z-index: 2;
-    /* &:hover {
-        z-index: 2;
-        transform: translateY(30px);
-    }     */
-}
-.circle3 {
-    z-index: 3;
-    /* &:hover {
-        z-index: 3;
-        transform: translateY(30px);
-    }     */
-}
-
-/* .circle3 { z-index: 3; }
+.circle3 { z-index: 3; }
 .circle2 { z-index: 2; }
-.circle1 { z-index: 1; } */
+.circle1 { z-index: 1; }
 
 .title {
     padding: 3% 2%;
@@ -300,6 +273,8 @@ h1 { /* section title */
     'S4 S3 L L';
     grid-gap: 20px;
     padding: 20px;
+    position: relative; /* for z-index */
+    z-index: 4;
 }
 .pics_center {
     display: grid;
@@ -323,6 +298,9 @@ h1 { /* section title */
     &:hover {
         opacity: 1;
     }
+    & p {
+        font-size: 16px;
+    }
 }
 #section_book .content {background-color: var(--color-khaki-light);}
 #section_theme .content {background-color: var(--color-brown-lightest);}
@@ -334,9 +312,10 @@ h1 { /* section title */
 h2 {font-size: 24px;} /* article intro */
 .block_L .text {
     padding: 20px 60px;
+    line-height: 40px;
 }
 .block_S .text {
-    padding: 10px 30px;
+    padding: 1px 30px;
     line-height: 30px;
 }
 
