--- a/style.css
+++ b/style.css
@@ -14,8 +14,7 @@
 
     --color-red: #BC4F4F;
     --color-red-light: #D66F6F;
-    --color-red-lightest: #F09595; 
-    
+    --color-red-lightest: #F09595;     
 
 }
 
@@ -29,7 +28,6 @@ html, body {
     width: 100%;
     user-select: none;
 }
-
 .container {
     max-width: 1140px;
     margin-left: auto;
@@ -43,33 +41,28 @@ h1, h2, h3, h4 {
 }
 /*---- navbar 導覽列 ----*/
 nav {
-    width: 100%;
-    height: 50px;
+
     border-bottom: solid 1px var(--color-brown-light);
     background-color: var(--color-khaki-lightest);
     position: sticky;
     top: 0px;
     z-index: 5; /* 將z-index設為5 */
 }
-nav .container {
-    padding: 0px 3%;
-    height: 100%;
-}
 nav ul {
-    list-style: none;
     margin: 0px;
     padding: 0px;
-    text-align: right;
+    text-align: center;
 }
 nav li {
     display: inline-block;
-    height: 100%;
-    padding: 13px 50px;
-    margin-left: 25px;
-    letter-spacing: 1px;
-    color: rgb(0,0,0,.8);
+    width: 250px;
     font-size: 18px;
+    letter-spacing: 1px;
     font-weight: bold;
+    padding: 13px 50px;    
+    
+    color: rgb(0,0,0,.8);   
+    
     &:hover {
         background-color: var(--color-brown-light);
         color: white;
@@ -79,18 +72,10 @@ h3 {font-size: 20px;} /* header intro */
 h4 {font-size: 16px;} /* header hashtags */
 
 /*---- #header ----*/
-/* .logo {
-    width: 45%;
-    padding: 1% 2%;    
-}
-.photo {
-    width: 48%;
-} */
 #header_pre {
     background-color: var(--color-khaki-lightest);
     text-align: center;    
 }
-/*  */
 #header_all {
     position: relative;
 }
@@ -113,27 +98,16 @@ h4 {font-size: 16px;} /* header hashtags */
     width: 500px;
     padding: 20% 2% 2% 25%;
     margin-left: 60px;
-    /* position: sticky; */
-    /* top: 33%; */
-    /* left: 13%; */
 }
 #PHOTO {
     width: 550px;
     margin-right: 80px;
-    /* margin-top: 10%; */
-    /* margin-right: 10%; */
-    /* position: sticky; */
-    /* top: 12%; */
-    /* border-radius: 0%; */
-    /* margin-bottom: 500px; */
 }
 #header_pre .container {
     padding-top: 0;
 }
-/*  */
 #header_pre .arrow {
     width: 10%;
-    /* margin-top: 10%; */
 }
 #header_index, #section_book, #section_theme, #section_newbook {
     background-color: var(--color-brown-light);    
@@ -152,7 +126,6 @@ h4 {font-size: 16px;} /* header hashtags */
     right: 13%;
     top: 16%;
 }
-
 #header_index .text {
     text-align: right;
     margin-top: 620px;
@@ -167,7 +140,6 @@ h4 {font-size: 16px;} /* header hashtags */
     padding: 0px 0px 0px 8px;
     text-decoration: underline;
 }
-
 
 /*---- #section ----*/
 #section_book, #section_theme, #section_newbook {
@@ -223,7 +195,7 @@ h4 {font-size: 16px;} /* header hashtags */
 .title {
     padding: 3% 2%;
 }
-h1 { /* section title */
+h1 {  /* section title */
     font-size: 32px;
     display: inline-block;
     padding: 2% 10%;
